# mfatext

./: .gitignore  LICENSE  MANIFEST.in  PKGBUILD  README.md  function_reference.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  setup.py  texteditor.spec
data/: com.github.mfatext.MfaText.desktop  com.github.mfatext.MfaText.metainfo.xml
debian/: control
docs/: INTEGRATION_GUIDE.md
flatpak/: com.github.mfatext.MfaText.yml
mfatext/: __init__.py  application.py  main.py
mfatext/core/: __init__.py  buffer.py  search.py
mfatext/ui/: __init__.py  dialogs.py  menus.py  window.py
mfatext/utils/: __init__.py  file_ops.py  xdg.py
